--- a/fbp_data_loading_demo.ipynb
+++ b/fbp_data_loading_demo.ipynb
@@ -124,8 +124,8 @@
     "SUDBURY_SITE_INFO = SiteInfo(\n",
     "    site_name=\"Sudbury\",\n",
     "    first_break_field_name=\"SPARE1\",\n",
-    "    hdf5_file_name=\"Sudbury3D_all_shots_2s.hdf\",\n",
-    "    md5_checksum=\"3cfea276432d72a0289a254afcf8c90c\",\n",
+    "    hdf5_file_name=\"preprocessed_Sudbury3D.hdf\",\n",
+    "    md5_checksum=\"f8772ec3a650820db3da1c8936f6945c\",\n",
     "    receiver_id_digit_count=3,\n",
     ")\n",
     "\n",
